--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "alpinejs": "^3.10.3",
         "autoprefixer": "^10.4.12",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
